--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -9,3 +9,8 @@
 @import 'components/principalFour';
 @import 'components/principalContact';
 @import 'components/footer';
+/*COMPONENTES DEL INDEX2*/
+
+@import 'components/seconds';
+@import 'components/secondsTwo';
+@import 'components/secondsThree';
