--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -2,10 +2,12 @@
   min-width: 320px;
   width: 100%;
   height: 5rem;
+  position: fixed;
+  background-color: white;
   & i {
     display: block;
     width: 135px;
-    height: 42px;
+    height: 5rem;
     background: url("/src/assets/images/Géneractiva_Logo_Isologo_Color.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -23,8 +25,9 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 10;
     &__bar {
-      background-color: #5210BC;
+      background-color: #5210bc;
       width: 30px;
       height: 5px;
       border-radius: 10px;
@@ -34,7 +37,7 @@
     &__bar::before {
       content: "";
       position: absolute;
-      background-color: #5210BC;
+      background-color: #5210bc;
       display: block;
       width: 30px;
       height: 5px;
@@ -45,20 +48,59 @@
       top: -0.8em;
     }
   }
+  @media (min-width: 950px) {
+    & {
+      height: auto;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      padding: 0 5rem;
+      background-color: white;
+      &_button {
+        display: none;
+      }
+      &_img i {
+        width: 20.2rem;
+        height: 7.5rem;
+      }
+    }
+  }
 }
 .nav_ul {
-  background-color: $softGrey;
-  transform: translateX(-100%);
+  background-color: $white;
+  transform: translateY(-125%);
   transition: ease-out 0.3s;
   padding: 2.8rem;
   opacity: 0.98;
+  background-color: white;
   &--show {
-    transform: translateX(0);
+    transform: translateY(0);
   }
   li {
     padding-bottom: 1.5rem;
   }
   &--button {
     @include button;
+  }
+  &--button {
+    margin-bottom: 0;
+  }
+  @media (min-width: 950px) {
+    & {
+      transform: none;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 0;
+      height: auto;
+      margin-top: 1rem;
+    }
+    & li {
+      padding-top: 8px;
+      padding-bottom: 0;
+    }
+    & button {
+      margin-bottom: 0;
+      cursor: pointer;
+    }
   }
 }
