--- a/src/styles/scss/components/_principal.scss
+++ b/src/styles/scss/components/_principal.scss
@@ -1,35 +1,44 @@
-.main{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5rem;
 }
-.principal{
-    margin: 3rem 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &_title{
-        @include title;
-        @media(min-width: 600px){
-            width: 70%;
-        }
+.principal {
+  margin: 3rem 0;
+  text-align: center;
+
+  &_title {
+    @include title;
+  }
+  &_paragraph {
+    font-weight: 400;
+    font-family: "Open Sans";
+    line-height: 30px;
+  }
+  &_button {
+    @include button;
+    display: block;
+    margin: 3rem auto;
+  }
+  & img {
+    width: 100%;
+    max-width: 600px;
+    padding: 3rem 0;
+  }
+  @media (min-width: 700px) {
+    &_subtitle,
+    &_title,
+    &_paragraph,
+    & img {
+      width: 75%;
+      margin: 0 auto;
     }
-    &_paragraph{
-        font-weight: 400;
-        font-family: 'Open Sans';
-        line-height: 30px;
-        text-align: center;
+    &_title,
+    &_paragraph {
+      text-align: left;
     }
-    &_button{
-        @include button;
-        display: block;
-        margin: 3rem auto;
-    }
-    & img{
-        width: 100%;
-        max-width: 600px;
-        padding: 3rem 0;
-    }
+  }
 }
