--- a/src/styles/scss/components/_principalContact.scss
+++ b/src/styles/scss/components/_principalContact.scss
@@ -19,7 +19,7 @@
       color: $violet;
       display: grid;
       & input {
-        width: 90%;
+        width: 100%;
         height: 40px;
         background-color: $input;
         border: 0 solid;
@@ -34,6 +34,7 @@
         }
       }
       & textarea {
+        width: 100%;
         background-color: $input;
         border: 0 solid;
         border-radius: 1rem;
@@ -53,6 +54,22 @@
       @include button;
       margin-top: 3rem;
       background-color: #5210BC;
+    }
+  }
+  @media (min-width: 700px) {
+    &_subtitle,
+    &_title,
+    &_paragraph,
+    & img {
+      width: 75%;
+      margin: 0 auto;
+    }
+    &_title,
+    &_paragraph{
+        text-align: left;
+    }
+    &_form{
+      width: 75%;
     }
   }
 }
