--- a/src/styles/scss/components/principalTwo.scss
+++ b/src/styles/scss/components/principalTwo.scss
@@ -1,21 +1,34 @@
-.principalTwo{
-    background-color: $white;
-    text-align: center;
-    & img{
-        width: 100%;
-        max-width: 600px;
-        padding: 3rem 0;
+.principalTwo {
+  background-color: $white;
+  text-align: center;
+  & img {
+    width: 100%;
+    max-width: 600px;
+    padding: 3rem 0;
+  }
+  &_subtitle {
+    padding: 3rem;
+  }
+  &_title {
+    @include title;
+  }
+  &_paragraph {
+    @include paragraph;
+  }
+  &_button {
+    @include button;
+  }
+  @media (min-width: 700px) {
+    &_subtitle,
+    &_title,
+    &_paragraph,
+    & img {
+      width: 75%;
+      margin: 0 auto;
     }
-    &_subtitle{
-        padding: 3rem
+    &_title,
+    &_paragraph {
+      text-align: left;
     }
-    &_title{
-      @include title;  
-    }
-    &_paragraph{
-        @include paragraph;
-    }
-    &_button{
-        @include button;
-    }
+  }
 }
