--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -14,3 +14,7 @@
 @import 'components/seconds';
 @import 'components/secondsTwo';
 @import 'components/secondsThree';
+/*COMPONENTES DEL INDEX3*/
+@import 'components/third';
+@import 'components/thirdTwo';
+@import 'components/thirdThree';
