--- a/src/styles/scss/components/_principalThree.scss
+++ b/src/styles/scss/components/_principalThree.scss
@@ -1,17 +1,9 @@
-.principalThree {
+.principalsThree {
   text-align: center;
-  &_subtitle {
-    padding: 3rem 0;
-  }
-  &_title {
-    @include title;
-  }
-  &_paragraph {
-    @include paragraph;
-  }
-  &_button {
-    @include button;
-  }
+  width: 100%;
+  padding: 5rem 0;
+}
+.principalThree{
   &_ul {
     text-align: left;
     width: 75%;
@@ -30,21 +22,19 @@
       }
     }
   }
-  & img {
-    width: 100%;
-    max-width: 600px;
+}
+.principalThree_text{
+  text-align: center;
+  &--title{
+    @include title;
   }
-  @media (min-width: 700px) {
-    &_subtitle,
-    &_title,
-    &_paragraph,
-    & img {
-      width: 75%;
-      margin: 0 auto;
-    }
-    &_title,
-    &_paragraph{
-        text-align: left;
-    }
+  &--button{
+    @include button;
+    margin-top: 3rem;
   }
+}
+.principal_img img{
+  
+  width: 100%;
+  max-width: 600px;
 }
