--- a/src/styles/scss/components/_principalTwo.scss
+++ b/src/styles/scss/components/_principalTwo.scss
@@ -4,6 +4,7 @@
   @media (min-width: 800px) {
     display: grid;
     grid-template-columns: 55% 45%;
+    padding: 5rem;
   }
 }
 .principalTwo_img img{
