--- a/src/styles/scss/components/_seconds.scss
+++ b/src/styles/scss/components/_seconds.scss
@@ -4,7 +4,7 @@
 .seconds{
     width: 100%;
     @media (min-width: 950px) {
-        margin-bottom: 10rem;
+        padding: 5rem;
     }
 }
 .second_text,
