--- a/src/styles/scss/components/_principal.scss
+++ b/src/styles/scss/components/_principal.scss
@@ -9,10 +9,11 @@
 .principals {
   width: 100%;
   text-align: center;
+  margin-bottom: 5rem;
   @media (min-width: 800px) {
     display: grid;
     grid-template-columns: 45% 55%;
-    padding: 0 5rem;
+    padding: 5rem;
   }
   &_img img {
     width: 100%;
