--- a/src/styles/scss/components/_principalFour.scss
+++ b/src/styles/scss/components/_principalFour.scss
@@ -1,9 +1,19 @@
 .principalsFour {
   width: 100%;
+  text-align: center;
+  @media (min-width: 800px) {
+    display: grid;
+    grid-template-columns: 55% 45%;
+    padding: 5rem;
+    align-items: center;
+  }
 }
 .principalFour_img img{
   width: 100%;
   max-width: 600px;
+  @media (min-width: 800px){
+    margin-right: 1.5rem;
+  }
 }
 .principalFour_text{
   text-align: center;
@@ -16,6 +26,11 @@
   &--button{
     @include button;
     margin-top: 3rem;
+  }
+  @media (min-width: 800px){
+    text-align: left;
+    width: 90%;
+    margin-left: 1.5rem;
   }
 }
 
