--- a/src/styles/scss/components/_secondsThree.scss
+++ b/src/styles/scss/components/_secondsThree.scss
@@ -2,6 +2,9 @@
   width: 100%;
   background-color: $softViolet;
   text-align: center;
+  @media (min-width: 800px) {
+    padding: 5rem;
+  }
 }
 .secondsThree_text {
   width: 90%;
