--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -24,7 +24,7 @@
     align-items: center;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 1.5rem;
     z-index: 10;
     &__bar {
       background-color: #5210bc;
