--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -45,11 +45,16 @@ p {
 .header {
   min-width: 320px;
   width: 100%;
-  height: 5rem;
   position: fixed;
   background-color: white;
 }
-.header i {
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav_img {
   display: block;
   width: 135px;
   height: 5rem;
@@ -59,29 +64,25 @@ p {
   background-size: cover;
 }
 @media (min-width: 500px) {
-  .header i {
+  .nav_img {
     background-image: url(/src/assets/images/Géneractiva_Logo_Logotipo_color.png);
   }
 }
-.header_button {
+.nav_button {
   width: 40px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 0;
-  right: 1.5rem;
-  z-index: 10;
 }
-.header_button__bar {
+.nav_button--bar {
   background-color: #5210bc;
   width: 30px;
   height: 5px;
   border-radius: 10px;
   position: relative;
 }
-.header_button__bar::after, .header_button__bar::before {
+.nav_button--bar::after, .nav_button--bar::before {
   content: "";
   position: absolute;
   background-color: #5210bc;
@@ -91,39 +92,22 @@ p {
   border-radius: 10px;
   top: 0.8em;
 }
-.header_button__bar::before {
+.nav_button--bar::before {
   top: -0.8em;
 }
-@media (min-width: 950px) {
-  .header {
-    height: auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 0 5rem;
-    background-color: white;
-  }
-  .header_button {
-    display: none;
-  }
-  .header_img i {
-    width: 20.2rem;
-    height: 7.5rem;
-  }
-}
-
 .nav_ul {
-  background-color: #F0EBF9;
-  transform: translateY(-125%);
-  transition: ease-out 0.3s;
-  padding: 2.8rem;
-  opacity: 0.98;
+  display: block;
+  position: fixed;
+  top: 60px;
+  width: 100vw;
+  height: 100vh;
   background-color: white;
+  text-align: center;
+  transform: translateX(0%);
+  transition: 0.5s ease;
 }
-.nav_ul--show {
-  transform: translateY(0);
-}
-.nav_ul li {
-  padding-bottom: 1.5rem;
+.nav_ul--a {
+  font-size: 30px;
 }
 .nav_ul--button {
   font-size: 15px;
@@ -137,28 +121,6 @@ p {
   -webkit-box-shadow: 7px 7px 18px -13px #3E0C8E;
   -moz-box-shadow: 7px 7px 18px -13px #3E0C8E;
   cursor: pointer;
-}
-.nav_ul--button {
-  margin-bottom: 0;
-}
-@media (min-width: 950px) {
-  .nav_ul {
-    transform: none;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 0;
-    height: auto;
-    margin-top: 1rem;
-  }
-  .nav_ul li {
-    padding-top: 8px;
-    padding-bottom: 0;
-  }
-  .nav_ul button {
-    margin-bottom: 0;
-    cursor: pointer;
-  }
 }
 
 .main {
