--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -1,10 +1,14 @@
 .header {
   min-width: 320px;
   width: 100%;
-  height: 5rem;
   position: fixed;
   background-color: white;
-  & i {
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &_img {
     display: block;
     width: 135px;
     height: 5rem;
@@ -22,19 +26,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 0;
-    right: 1.5rem;
-    z-index: 10;
-    &__bar {
+    &--bar {
       background-color: #5210bc;
       width: 30px;
       height: 5px;
       border-radius: 10px;
       position: relative;
     }
-    &__bar::after,
-    &__bar::before {
+    &--bar::after,
+    &--bar::before {
       content: "";
       position: absolute;
       background-color: #5210bc;
@@ -44,63 +44,82 @@
       border-radius: 10px;
       top: 0.8em;
     }
-    &__bar::before {
+    &--bar::before {
       top: -0.8em;
     }
   }
-  @media (min-width: 950px) {
-    & {
-      height: auto;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      padding: 0 5rem;
-      background-color: white;
-      &_button {
-        display: none;
-      }
-      &_img i {
-        width: 20.2rem;
-        height: 7.5rem;
-      }
+  &_ul {
+    display: block;
+    position: fixed;
+    top: 60px;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    text-align: center;
+    transform: translateX(0%);
+    transition: 0.5s ease;
+    &--a{
+      font-size: 30px;
+    }
+    &--button{
+      @include button
     }
   }
 }
-.nav_ul {
-  background-color: $white;
-  transform: translateY(-125%);
-  transition: ease-out 0.3s;
-  padding: 2.8rem;
-  opacity: 0.98;
-  background-color: white;
-  &--show {
-    transform: translateY(0);
-  }
-  li {
-    padding-bottom: 1.5rem;
-  }
-  &--button {
-    @include button;
-  }
-  &--button {
-    margin-bottom: 0;
-  }
-  @media (min-width: 950px) {
-    & {
-      transform: none;
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      padding: 0;
-      height: auto;
-      margin-top: 1rem;
-    }
-    & li {
-      padding-top: 8px;
-      padding-bottom: 0;
-    }
-    & button {
-      margin-bottom: 0;
-      cursor: pointer;
-    }
-  }
-}
+
+// .nav_ul {
+//     background-color: $white;
+//   transform: translateY(-125%);
+//   transition: ease-out 0.3s;
+//   padding: 2.8rem;
+//   opacity: 0.98;
+//   background-color: white;
+//   &--show {
+//       transform: translateY(0);
+//     }
+//     li {
+//         padding-bottom: 1.5rem;
+//       }
+//       &--button {
+//           @include button;
+//   }
+//   &--button {
+//       margin-bottom: 0;
+//     }
+//     @media (min-width: 950px) {
+//         & {
+//             transform: none;
+//             display: flex;
+//             justify-content: space-evenly;
+//             align-items: center;
+//             padding: 0;
+//             height: auto;
+//       margin-top: 1rem;
+//     }
+//     & li {
+//         padding-top: 8px;
+//         padding-bottom: 0;
+//       }
+//       & button {
+//           margin-bottom: 0;
+//           cursor: pointer;
+//         }
+//       }
+
+//   @media (min-width: 950px) {
+//     & {
+//       height: auto;
+//       display: grid;
+//       grid-template-columns: repeat(2, 1fr);
+//       padding: 0 5rem;
+//       background-color: white;
+//       &_button {
+//         display: none;
+//       }
+//       &_img i {
+//         width: 20.2rem;
+//         height: 7.5rem;
+//       }
+//     }
+//   }
+// }
