--- a/src/styles/scss/components/_header.scss
+++ b/src/styles/scss/components/_header.scss
@@ -8,16 +8,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  &_img {
+  &_img a{
     display: block;
     width: 135px;
     height: 5rem;
+    position: relative;
+    z-index: 1;
+    left: -25px;
     background: url("/src/assets/images/Géneractiva_Logo_Isologo_Color.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     @media (min-width: 500px) {
       background-image: url(/src/assets/images/Géneractiva_Logo_Logotipo_color.png);
+      position: inherit;
     }
   }
   &_button {
@@ -26,6 +30,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 1;
     &--bar {
       background-color: #5210bc;
       width: 30px;
@@ -56,70 +62,38 @@
     height: 100vh;
     background-color: white;
     text-align: center;
-    transform: translateX(0%);
+    transform: translateY(-130%);
     transition: 0.5s ease;
+    &--show{
+      transform: translateY(0%);
+    }
+
+    & li{
+      padding: 1em;
+    }
     &--a{
-      font-size: 30px;
+      font-size: 20px;
     }
     &--button{
       @include button
     }
+
+  }
+  @media (min-width: 800px) {
+    &_button{
+      display: none;
+    }
+    &_ul{
+      display: flex;
+      align-items: baseline;
+      justify-content: flex-end;
+      position: static;
+      height: 5rem;
+      transform: translateY(0);
+      &--a{
+        font-size: 16px;
+      }
+    }
   }
 }
 
-// .nav_ul {
-//     background-color: $white;
-//   transform: translateY(-125%);
-//   transition: ease-out 0.3s;
-//   padding: 2.8rem;
-//   opacity: 0.98;
-//   background-color: white;
-//   &--show {
-//       transform: translateY(0);
-//     }
-//     li {
-//         padding-bottom: 1.5rem;
-//       }
-//       &--button {
-//           @include button;
-//   }
-//   &--button {
-//       margin-bottom: 0;
-//     }
-//     @media (min-width: 950px) {
-//         & {
-//             transform: none;
-//             display: flex;
-//             justify-content: space-evenly;
-//             align-items: center;
-//             padding: 0;
-//             height: auto;
-//       margin-top: 1rem;
-//     }
-//     & li {
-//         padding-top: 8px;
-//         padding-bottom: 0;
-//       }
-//       & button {
-//           margin-bottom: 0;
-//           cursor: pointer;
-//         }
-//       }
-
-//   @media (min-width: 950px) {
-//     & {
-//       height: auto;
-//       display: grid;
-//       grid-template-columns: repeat(2, 1fr);
-//       padding: 0 5rem;
-//       background-color: white;
-//       &_button {
-//         display: none;
-//       }
-//       &_img i {
-//         width: 20.2rem;
-//         height: 7.5rem;
-//       }
-//     }
-//   }
-// }
